tests/script_errors/const_expr_range_bad_end/error.txt
Error: 
    1 | {"snot": [0,1,2,3,4,5,6]}.snot[2:"bad"]
      |                                  ^^^^^ Conflicting types, got string but expected integer